[package]
name = "sentry-tide"
version = "0.1.0"
authors = ["Kangwook Lee <pbzweihander@gmail.com>"]
edition = "2018"

[features]
backtrace = ["sentry-anyhow/backtrace"]

[dependencies]
async-trait = "0.1"
sentry-anyhow = "0.23.0"
sentry-core = { version = "0.23", default-features = false, features = ["client"] }
tide = { version = "0.16", default-features = false }
